Added blank favorite button to recipe card, no functionality Firebase data structure now follows "UserData" -> User -> Collections of Data -> Data documents structure. Implemented in connect user function

--- a/app/src/main/res/layout/recipe_card.xml
+++ b/app/src/main/res/layout/recipe_card.xml
@@ -45,6 +45,13 @@
                 android:id="@+id/recipe_title_TV"
                 android:text="Recipe name" />
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/recipe_fav_but"
+                android:src="@drawable/ic_favorite_border_black_24dp"/>
+
         </FrameLayout>
 
 
