--- a/app/src/main/res/layout/user_profile_frag.xml
+++ b/app/src/main/res/layout/user_profile_frag.xml
@@ -9,15 +9,35 @@
     android:gravity="center_horizontal"
     tools:context="edu.utap.nutrino.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:textColor="#006400"
-        android:text="User Profile"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
         android:layout_weight="1"
-        android:id="@+id/welcomeTV"/>
+        android:id="@+id/headerSection">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textColor="#006400"
+            android:text="User Profile"
+            android:layout_weight="2"
+            android:id="@+id/userProfileTV"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@android:color/holo_red_light"
+            android:text="Diet Type"
+            android:layout_weight="1"
+            android:id="@+id/welcomeTV"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,27 +61,71 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_weight="10"
-        android:id="@+id/order"
+        android:gravity="center_horizontal"
+        android:id="@+id/intolerancesSection"
         >
-        <Spinner
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/limit_spinner"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@android:color/holo_red_light"
+            android:text="Intolerances"
+            android:id="@+id/intolerancesMessage"/>
+
+        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/intolerancesGrid"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight = "1"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
             />
 
-        <CheckBox
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:id="@+id/updateSection">
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="price"
-            android:id="@+id/price_order_checkbox"/>
-        <Spinner
+            android:text="Go Back"
+            android:backgroundTint="@android:color/holo_orange_light"
+            android:id="@+id/back_button"
+            />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/choose_order_spinner"
+            android:text="Save"
+            android:backgroundTint="@android:color/holo_orange_light"
+            android:id="@+id/save_button"
+            />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear"
+            android:backgroundTint="@android:color/holo_orange_light"
+            android:id="@+id/clear_button"
             />
     </LinearLayout>
 
