--- a/app/src/main/res/values/diet.xml
+++ b/app/src/main/res/values/diet.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string-array name="diet_type">
-        <item>Diet Type?</item>
+        <item>Omnivore</item>
         <item>Gluten Free</item>
         <item>Ketogenic</item>
         <item>Vegetarian</item>
@@ -13,7 +14,8 @@
         <item>Primal</item>
         <item>Whole30</item>
     </string-array>
-    <string name="omnivore_info">If no explicit diet is selected, you are assumed to be an omnivore.</string>
+
+    <string name="omnivore_info">A diet having no restrictions; this is the default diet type.</string>
     <string name="gluten_free_info">Eliminating gluten means avoiding wheat, barley, rye, and other gluten-containing grains and foods made from them (or that may have been cross contaminated).</string>
     <string name="ketogenic_info">The keto diet is based more on the ratio of fat, protein, and carbs in the diet rather than specific ingredients. Generally speaking, high fat, protein-rich foods are acceptable and high carbohydrate foods are not.</string>
     <string name="vegetarian_info">No ingredients may contain meat or meat by-products, such as bones or gelatin.</string>
@@ -24,5 +26,24 @@
     <string name="paleo_info">Allowed ingredients include meat (especially grass fed), fish, eggs, vegetables, some oils (e.g. coconut and olive oil), and in smaller quantities, fruit, nuts, and sweet potatoes. We also allow honey and maple syrup (popular in Paleo desserts, but strict Paleo followers may disagree). Ingredients not allowed include legumes (e.g. beans and lentils), grains, dairy, refined sugar, and processed foods.</string>
     <string name="primal_info">Very similar to Paleo, except dairy is allowed - think raw and full fat milk, butter, ghee, etc.</string>
     <string name="whole30_info">Allowed ingredients include meat, fish/seafood, eggs, vegetables, fresh fruit, coconut oil, olive oil, small amounts of dried fruit and nuts/seeds. Ingredients not allowed include added sweeteners (natural and artificial, except small amounts of fruit juice), dairy (except clarified butter or ghee), alcohol, grains, legumes (except green beans, sugar snap peas, and snow peas), and food additives, such as carrageenan, MSG, and sulfites.</string>
+
     <string name="diet_info_cancel">Got it, thanks!</string>
+    <string name="diet_update_cancel">Cancel</string>
+    <string name="diet_update_confirm">Save</string>
+
+    <string-array name="intolerance_candidates">
+        <item>Dairy</item>
+        <item>Egg</item>
+        <item>Gluten</item>
+        <item>Grain</item>
+        <item>Peanut</item>
+        <item>Seafood</item>
+        <item>Sesame</item>
+        <item>Shellfish</item>
+        <item>Soy</item>
+        <item>Sulfite</item>
+        <item>Tree Nut</item>
+        <item>Wheat</item>
+    </string-array>
+
 </resources>
