--- a/app/src/main/res/layout/single_rv_frag.xml
+++ b/app/src/main/res/layout/single_rv_frag.xml
@@ -7,7 +7,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         android:id="@+id/recipe_list_RV"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/clear_cart_container"
+        android:layout_weight="1">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/clear_cart_button"
+            android:layout_gravity="center"
+            android:text="@string/clear_cart"/>
+    </FrameLayout>
+
 
 </LinearLayout>
